--- a/web/package.json
+++ b/web/package.json
@@ -23,13 +23,14 @@
   },
   "dependencies": {
     "@material-ui/core": "^1.2.3",
-    "@nervos/web3": "^0.17.12",
+    "@nervos/web3": "0.17.12",
     "dotenv": "^6.0.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-hot-loader": "^4.3.3",
     "react-loadable": "^5.4.0",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "@cita/cita-web3": "https://github.com/cryptape/web3.js#develop"
   },
   "devDependencies": {
     "@types/echarts": "^0.0.12",
