--- a/web/package.json
+++ b/web/package.json
@@ -22,6 +22,7 @@
     ]
   },
   "dependencies": {
+    "@cita/cita-web3": "^0.5.9",
     "@material-ui/core": "^1.2.3",
     "@nervos/web3": "0.17.12",
     "dotenv": "^6.0.0",
@@ -29,8 +30,7 @@
     "react-dom": "^16.4.1",
     "react-hot-loader": "^4.3.3",
     "react-loadable": "^5.4.0",
-    "react-router-dom": "^4.3.1",
-    "@cita/cita-web3": "https://github.com/cryptape/web3.js#develop"
+    "react-router-dom": "^4.3.1"
   },
   "devDependencies": {
     "@types/echarts": "^0.0.12",
